--- a/day2.ipynb
+++ b/day2.ipynb
@@ -5,10 +5,9 @@
    "id": "e37b30c3-f95c-4c7c-95ba-84c2f52c1265",
    "metadata": {},
    "source": [
-    "<h2>--- Day 1: Gift Shop ---</h2>\n",
+    "<h2>--- Day 2: Gift Shop ---</h2>\n",
     "\n",
-    "Jeremy Bloom solutions for  [Advent of Code](https://adventofcode.com): [2025 Day 2](https://adventofcode.com/2025/day/2)\n",
-    "\n"
+    "Jeremy Bloom solutions for  [Advent of Code](https://adventofcode.com): [2025 Day 2](https://adventofcode.com/2025/day/2)"
    ]
   },
   {
