adding part b day 4

--- a/day4.ipynb
+++ b/day4.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 363,
    "id": "82bf1e02-e444-426b-b128-bd79e967892a",
    "metadata": {},
    "outputs": [],
@@ -108,12 +108,14 @@
     "    self.num_cols = len(grid_data[0])\n",
     "    self.space_needed_to_move = 5 # 3 or less of the 8 spots can be blocked and paper still moved\n",
     "\n",
+    "    self.count_paper_removed_as_open = False # added for part 2\n",
+    "    \n",
     "    # verify grid_data\n",
     "    for r in range(self.num_rows):\n",
     "      for c in range(self.num_cols):     \n",
     "        if self.get_val_by_row_col(r+1,c+1) not in (self.VAL_PAPER, self.VAL_EMPTY, self.VAL_PAPER_REMOVED):\n",
     "          print(f\"error at row {r+1} col {c+1}: {self.get_val_by_row_col(r+1,c+1)}\")\n",
-    "\n",
+    "  \n",
     "  def print(self):\n",
     "    for r in range(self.num_rows):\n",
     "      print(self.grid_data[r])\n",
@@ -209,13 +211,20 @@
     "      print(\"error - unexpected return val\", num_paper, num_empty, num_offgrid, num_paper_removed)\n",
     "      return False\n",
     "\n",
-    "    if num_empty + num_offgrid >= self.space_needed_to_move:\n",
-    "      # room to move\n",
-    "      return True\n",
-    "    else:\n",
-    "      # not enough space to remove\n",
-    "      #print(f\"is_removable_paper_at_row_col({row_num},{col_num}) False as no space\")\n",
-    "      return False\n",
+    "\n",
+    "    \n",
+    "    if self.count_paper_removed_as_open == False:\n",
+    "      if num_empty + num_offgrid >= self.space_needed_to_move:\n",
+    "        # room to move\n",
+    "        return True\n",
+    "      else:\n",
+    "        return False\n",
+    "    else:      \n",
+    "      if num_empty + num_offgrid  + num_paper_removed >= self.space_needed_to_move:\n",
+    "        # room to move\n",
+    "        return True\n",
+    "      else:\n",
+    "        return False\n",
     "\n",
     "  \n",
     "  def remove_paper_at_row_col(self,row_num, col_num, warn=0):\n",
@@ -242,12 +251,31 @@
     "        if self.get_val_by_row_col(r+1,c+1) == self.VAL_PAPER_REMOVED:\n",
     "          n += 1\n",
     "    return n\n",
+    "\n",
+    "  def remove_rolls_repeating(self): \n",
+    "    print(\"remove_rolls_repeating\")\n",
+    "    # added for part 2\n",
+    "    n_prev = -1\n",
+    "    n_cur = self.count_movables()\n",
+    "    i = 0\n",
+    "    while n_cur != n_prev:\n",
+    "      #print(f\"n_cur: {n_cur}  n_prev: {n_prev}\")\n",
+    "      i += 1\n",
+    "      n_prev = n_cur\n",
+    "      self.remove_rolls()\n",
+    "      n_cur = self.count_movables()\n",
+    "      if i > 100:\n",
+    "        break\n",
+    "      print(f\"round {i:2d} removed total of {n_cur}\")\n",
+    "      \n",
+    "      \n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 364,
    "id": "1d849e25-2158-4e0d-96c2-9c481d889a1a",
    "metadata": {},
    "outputs": [
@@ -281,18 +309,67 @@
    ],
    "source": [
     "#day4_test = get_input_file(\"day4_example.txt\")\n",
-    "g = AdventGrid(day4_test)\n",
+    "g1 = AdventGrid(day4_test)\n",
     "\n",
     "#g.print()\n",
-    "g.print_full()\n",
-    "g.remove_rolls()\n",
-    "g.print()\n",
-    "print(g.count_movables())\n"
+    "g1.print_full()\n",
+    "g1.remove_rolls()\n",
+    "g1.print()\n",
+    "print(g1.count_movables())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 365,
+   "id": "1c97ee6d-883f-4b8a-b5f7-1417277c218b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "..@@.@@@@.\n",
+      "@@@.@.@.@@\n",
+      "@@@@@.@.@@\n",
+      "@.@@@@..@.\n",
+      "@@.@@@@.@@\n",
+      ".@@@@@@@.@\n",
+      ".@.@.@.@@@\n",
+      "@.@@@.@@@@\n",
+      ".@@@@@@@@.\n",
+      "@.@.@@@.@.\n"
+     ]
+    }
+   ],
+   "source": [
+    "g1 = AdventGrid(day4_test)\n",
+    "g1.count_paper_removed_as_open = True # gross\n",
+    "#g1.remove_rolls()\n",
+    "g1.remove_rolls_repeating\n",
+    "print( g1.count_movables() )\n",
+    "g1.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12950265-286a-4a47-bad7-7632286f4956",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7f26b7-91f2-4ce4-89f0-5bfe61d37987",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
    "id": "76e0b488-511c-42b0-ab25-fbcbc066de8d",
    "metadata": {},
    "outputs": [
@@ -300,50 +377,147 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "136 136\n"
+      "10 10\n",
+      "1428\n"
      ]
     }
    ],
    "source": [
     "day4_input = get_input_file(\"day4_input.txt\")\n",
-    "g = AdventGrid(day4_input)\n",
-    "print(g.num_rows, g.num_cols)"
+    "g2 = AdventGrid(day4_input)\n",
+    "print(g.num_rows, g.num_cols)\n",
+    "g2.remove_rolls()\n",
+    "print(g2.count_movables())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "id": "f1f6b41f-b20e-43df-bc8c-b61ab5e435df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "id": "39ade48b-32d7-4a0a-adb2-ae46f43e3146",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1428\n"
+      "remove_rolls_repeating\n",
+      "round  1 removed total of 30\n",
+      "round  2 removed total of 39\n",
+      "round  3 removed total of 43\n",
+      "round  4 removed total of 43\n",
+      "..xx.xxxx.\n",
+      "xxx.x.x.xx\n",
+      "xxxxx.x.xx\n",
+      "x.xx@@..x.\n",
+      "xx.@@@@.xx\n",
+      ".xx@@@@@.x\n",
+      ".x.@.@.@@x\n",
+      "x.x@@.@@@x\n",
+      ".xx@@@@@x.\n",
+      "x.x.@@@.x.\n"
      ]
     }
    ],
    "source": [
-    "g.remove_rolls()\n",
-    "print(g.count_movables())\n"
+    "g1 = AdventGrid(day4_test)\n",
+    "g1.count_paper_removed_as_open = True # gross\n",
+    "#g1.remove_rolls()\n",
+    "g1.remove_rolls_repeating()\n",
+    "g1.count_movables()\n",
+    "g1.print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39ade48b-32d7-4a0a-adb2-ae46f43e3146",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 368,
    "id": "99c3e588-8ebf-46ea-a0a1-2a88fa51dccb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remove_rolls_repeating\n",
+      "round  1 removed total of 2939\n",
+      "round  2 removed total of 4309\n",
+      "round  3 removed total of 5418\n",
+      "round  4 removed total of 6111\n",
+      "round  5 removed total of 6713\n",
+      "round  6 removed total of 7208\n",
+      "round  7 removed total of 7602\n",
+      "round  8 removed total of 7867\n",
+      "round  9 removed total of 8043\n",
+      "round 10 removed total of 8180\n",
+      "round 11 removed total of 8285\n",
+      "round 12 removed total of 8372\n",
+      "round 13 removed total of 8436\n",
+      "round 14 removed total of 8497\n",
+      "round 15 removed total of 8539\n",
+      "round 16 removed total of 8568\n",
+      "round 17 removed total of 8609\n",
+      "round 18 removed total of 8629\n",
+      "round 19 removed total of 8664\n",
+      "round 20 removed total of 8693\n",
+      "round 21 removed total of 8715\n",
+      "round 22 removed total of 8733\n",
+      "round 23 removed total of 8754\n",
+      "round 24 removed total of 8784\n",
+      "round 25 removed total of 8800\n",
+      "round 26 removed total of 8809\n",
+      "round 27 removed total of 8819\n",
+      "round 28 removed total of 8828\n",
+      "round 29 removed total of 8837\n",
+      "round 30 removed total of 8841\n",
+      "round 31 removed total of 8847\n",
+      "round 32 removed total of 8850\n",
+      "round 33 removed total of 8863\n",
+      "round 34 removed total of 8872\n",
+      "round 35 removed total of 8885\n",
+      "round 36 removed total of 8890\n",
+      "round 37 removed total of 8893\n",
+      "round 38 removed total of 8898\n",
+      "round 39 removed total of 8902\n",
+      "round 40 removed total of 8906\n",
+      "round 41 removed total of 8909\n",
+      "round 42 removed total of 8913\n",
+      "round 43 removed total of 8918\n",
+      "round 44 removed total of 8921\n",
+      "round 45 removed total of 8925\n",
+      "round 46 removed total of 8927\n",
+      "round 47 removed total of 8928\n",
+      "round 48 removed total of 8936\n",
+      "round 49 removed total of 8936\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8936"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g2 = AdventGrid(day4_input)\n",
+    "g2.count_paper_removed_as_open = True # gross\n",
+    "#g1.remove_rolls()\n",
+    "g2.remove_rolls_repeating()\n",
+    "g2.count_movables()\n",
+    "#g1.print()"
+   ]
   },
   {
    "cell_type": "code",
